# ai-medical-triage

./: README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: cases.py  environment.py  models.py
server/: app.py
