[project]
name = "medtriage-env"
version = "0.1.0"
description = "AI Medical Triage OpenEnv Project"
authors = [
    { name = "Avimanyu", email = "avimanyu@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "gradio",
    "openai"
]

[tool.openenv]
entrypoint = "inference.py"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"